add config file

--- a/conf/detector.conf
+++ b/conf/detector.conf
@@ -1,4 +1,59 @@
 {
-"posDir":"",
-"gtDir":""
+"detectorOpts":{
+	"name":"ACFDetector.dat",
+	"gtDir":"",
+	"posImgDir":"",
+	"negImgDir":"",
+	"posWinDir":"",
+	"negWinDir":"",
+	"modelDs":[100,41],
+	"modelDsPad":[128,64],
+	"stride":4,
+	"winsSave":0,
+},
+"pyramidOpts":{
+	"nPerOct":8,
+	"nOctUp":0,
+	"nApprox":7,
+	"lambdas":[0,0.1158,0.1158],
+	"pad":[16,12],
+	"smooth":1
+},
+"channelsOpts":{
+	"colorChn":{
+		"name":"ColorChannels",
+		"enabled":1,
+		"smooth":1,
+		"colorSpace":"luv"
+	},
+	"gradMagChn":{
+		"name":"GradientMagnitude",
+		"enabled":1,
+		"colorChn":0,
+		"normRad":5,
+		"normConst":0.0050,
+		"full":0
+	},
+	"gradHistChn":{
+		"name":"GradientHistogram",
+		"enabled":1,
+		"binSize":[],
+		"nOrients":6,
+		"softBin":0,
+		"useHog":0,
+		"clipHog":0.2
+	}
+},
+"NMSOpts":{
+	"type":"maxg",
+	"overlap":0.65,
+	"overDnm":"min"
+},
+"classifierOpts":{
+	"nWeak":2048,
+	"treeBins":256,
+	"maxDepth":2,
+	"minWeight":0.01,
+	"fracFtrs":0.0625
+}
 }
